==> alibaba/AliOS-Things/device/sal/wifi/cc3100/3rd-party/mcu_vendor/microchip/harmony/v2.04/framework/driver/tmr/src/dynamic/drv_tmr.c <==
#include <stddef.h>
#include <string.h>
#include "driver/tmr/src/drv_tmr_local.h"
#include "system/clk/sys_clk.h"

static bool _DRV_TMR_ClockSourceSet(TMR_MODULE_ID timerId, DRV_TMR_CLK_SOURCES clockSource)
{
    bool clockSet = true;
    /* Clock Source Selection */
    if(clockSource == DRV_TMR_CLKSOURCE_INTERNAL)
    {
        if ( PLIB_TMR_ExistsClockSource ( timerId ) )
        {               
            PLIB_TMR_ClockSourceSelect ( timerId, TMR_CLOCK_SOURCE_PERIPHERAL_CLOCK );           
        }
        else
        {
            /* If clock source feature doesn't exist for any specific timer module instance,
            then by default internal peripheral clock is considered as timer source, so do nothing */ 
        }
    }
    /* External Synchronous Clock Source Selection */
    else if(!(clockSource & 0x10))
    {
        if ( PLIB_TMR_ExistsClockSource ( timerId ) )
        {               
            if ( PLIB_TMR_ExistsClockSourceSync ( timerId )  )
            {
                _DRV_TMR_CLOCK_SOURCE_SELECT ( timerId, clockSource );               
                PLIB_TMR_ClockSourceExternalSyncEnable ( timerId );                    
            }
            /* If Synchronization feature doesn't exist for any specific timer module 
            instance with external clock source then it is synchronous by default */
            else if (clockSource == DRV_TMR_CLKSOURCE_EXTERNAL_SYNCHRONOUS)
            {
                PLIB_TMR_ClockSourceSelect ( timerId, TMR_CLOCK_SOURCE_EXTERNAL_INPUT_PIN );
            }
            else
            {
                clockSet = false;
            }  
        }
        else
        {
            clockSet = false;
        }        
    }
    /* External Asynchronous Clock Source Selection */
    else if(clockSource & 0x10)
    {
        if ( PLIB_TMR_ExistsClockSourceSync ( timerId ) )
        {
            _DRV_TMR_CLOCK_SOURCE_SELECT ( timerId, clockSource );               
            PLIB_TMR_ClockSourceExternalSyncDisable ( timerId );
        }
        else
        {
            clockSet = false;
        }        
    }
    
    return clockSet;
}

static bool _DRV_TMR_InstanceSetup ( DRV_TMR_MODULE_INSTANCE *pTmrInst)
{    
    TMR_MODULE_ID timerId = pTmrInst->tmrId;

    /* 1. Clock Source Selection and prescaler */
    if(!_DRV_TMR_ClockSourceSet(timerId, pTmrInst->clockSource))
    {
        return false;
    }

    /* 2. Prescaler */
    if(!_DRV_TMR_ClockPrescaleSet(timerId, pTmrInst->prescale))
    {
        return false;
    }

    /* 3. Timer operation mode */
    if(!_DRV_TMR_OperModeSet(timerId, pTmrInst->operMode, true))
    {
        return false;
    }

    /* 4. Asynchronous Write Control */
#if defined(PLIB_TMR_ExistsCounterAsyncWriteControl)
    if( PLIB_TMR_ExistsCounterAsyncWriteControl ( timerId ) )
    {
        if( pTmrInst->asyncWriteEnable)
        {
            PLIB_TMR_CounterAsyncWriteEnable ( timerId );
        }
        else 
        {
            PLIB_TMR_CounterAsyncWriteDisable ( timerId );
        }
    }
#endif


    /* Successfully initialized */
    return true;

}

uint32_t DRV_TMR_CounterValueGet ( DRV_HANDLE handle )
{

    DRV_TMR_CLIENT_OBJ *dObj = _DRV_TMR_ClientObj(handle);

    if(dObj)
    {
        if(dObj->pModInst->operMode == DRV_TMR_OPERATION_MODE_32_BIT)
        {
            return PLIB_TMR_Counter32BitGet ( dObj->pModInst->tmrId );
        }
        else
        {
            return PLIB_TMR_Counter16BitGet ( dObj->pModInst->tmrId );
        }
    }

    return 0;
}

void DRV_TMR_CounterClear ( DRV_HANDLE handle )
{
    DRV_TMR_CLIENT_OBJ *dObj = _DRV_TMR_ClientObj(handle);

    if(dObj)
    {
        if(dObj && dObj->pModInst->operMode == DRV_TMR_OPERATION_MODE_16_BIT)
        {   
            PLIB_TMR_Counter16BitClear ( dObj->pModInst->tmrId );
        }
        else
        {
            PLIB_TMR_Counter32BitClear ( dObj->pModInst->tmrId );
        }
    }
}

bool DRV_TMR_AlarmRegister 
( 
    DRV_HANDLE handle, 
    uint32_t divider, 
    bool isPeriodic,
    uintptr_t context, 
    DRV_TMR_CALLBACK callBack 
)
{
    DRV_TMR_CLIENT_OBJ *dObj = _DRV_TMR_ClientObj(handle);

    if(dObj == 0)
    {
        return false;
    }

    DRV_TMR_OPERATION_MODE operMode = dObj->pModInst->operMode;
    bool success = false;

    if(operMode == DRV_TMR_OPERATION_MODE_32_BIT)
    {
        success = (divider >= DRV_TIMER_DIVIDER_MIN_32BIT && divider <= DRV_TIMER_DIVIDER_MAX_32BIT);
    }
    else
    {
        success = (divider >= DRV_TIMER_DIVIDER_MIN_16BIT && divider <= DRV_TIMER_DIVIDER_MAX_16BIT);
    }

    if(success)
    {
        bool resume = _DRV_TMR_Suspend(dObj);
        _DRV_TMR_ClientSetParams(dObj, divider - 1, isPeriodic, context, callBack);

        if(operMode == DRV_TMR_OPERATION_MODE_32_BIT)
        {
            PLIB_TMR_Period32BitSet ( dObj->pModInst->tmrId, divider - 1);
        }
        else
        {
            PLIB_TMR_Period16BitSet ( dObj->pModInst->tmrId, (uint16_t)divider - 1 );
        }
        if(resume)
        {
            _DRV_TMR_Resume(dObj, resume);
        }
        else
        {
            dObj->clientStatus = DRV_TMR_CLIENT_OBJ_ARMED;
        }
    }


    return success;
}

void DRV_TMR_AlarmPeriodSet ( DRV_HANDLE handle, uint32_t   period )
{
    DRV_TMR_CLIENT_OBJ *dObj = _DRV_TMR_ClientObj(handle);

    if(dObj)
    {
        bool resume = _DRV_TMR_Suspend(dObj);
        /* Client update with the new count value */
        dObj->pModInst->timerPeriod = period;

        if(dObj->pModInst->operMode == DRV_TMR_OPERATION_MODE_32_BIT)
        {
            PLIB_TMR_Period32BitSet ( dObj->pModInst->tmrId, period);
        }
        else
        {
            PLIB_TMR_Period16BitSet ( dObj->pModInst->tmrId, (uint16_t)period );
        }
        if(resume)
        {
            _DRV_TMR_Resume(dObj, resume);
        }
        else
        {
            dObj->clientStatus = DRV_TMR_CLIENT_OBJ_ARMED;
        }
    }
}

uint32_t DRV_TMR_CounterFrequencyGet ( DRV_HANDLE handle )
{
    uint32_t prescale, tmrBaseFreq ;
    DRV_TMR_CLIENT_OBJ *dObj = _DRV_TMR_ClientObj(handle);

    if(dObj)
    {
        if(dObj->pModInst->clockSource == DRV_TMR_CLKSOURCE_INTERNAL)
        {
            tmrBaseFreq = SYS_CLK_PeripheralFrequencyGet ( CLK_BUS_FOR_TIMER_PERIPHERAL);
            prescale = PLIB_TMR_PrescaleGet ( dObj->pModInst->tmrId );
            return ( tmrBaseFreq / prescale );
        }
    }

    return 0;
}
