==> alibaba/AliOS-Things/device/sal/wifi/cc3100/3rd-party/mcu_vendor/microchip/harmony/v2.04/framework/driver/tmr/src/dynamic/drv_tmr_pic32c.c <==
#include <stddef.h>
#include <string.h>
#include "driver/tmr/src/drv_tmr_local.h"
#include "system/int/sys_int.h"
#include  "driver/tmr/src/dynamic/pic32cz/timer_pic32cz.h"
#include "system/clk/sys_clk.h"

static bool _DRV_TMR_ClockSourceSet(DRV_TMR_MODULE_INSTANCE *pTmr, DRV_TMR_CLK_SOURCES clockSource)
{
    bool clockSet = true;
    /* Clock Source Selection */
    if(pTmr->operMode == DRV_TMR_OPERATION_MODE_16_BIT)
    {
        tmr_ClockSourceSelect ( pTmr->tmrId, clockSource );
    }
    else
    {
        tmr_32bit_ClockSourceSelect ( pTmr->tmrId, clockSource );
    }
    return clockSet;
}

static bool _DRV_TMR_InstanceSetup ( DRV_TMR_MODULE_INSTANCE *pTmrInst)
{    
    TMR_MODULE_ID timerId = pTmrInst->tmrId;

    /* 1. Clock Source Selection and prescaler */
    if(!_DRV_TMR_ClockSourceSet(pTmrInst, pTmrInst->clockSource))
    {
        return false;
    }
    if(pTmrInst->operMode == DRV_TMR_OPERATION_MODE_16_BIT)
    {
        tmr_setup(timerId);
    }
    else
    {
        tmr_32bit_setup(timerId);
    }
    /* Successfully initialized */
    return true;

}

uint32_t DRV_TMR_CounterValueGet ( DRV_HANDLE handle )
{

    DRV_TMR_CLIENT_OBJ *dObj = _DRV_TMR_ClientObj(handle);

    if(dObj)
    {
        if(dObj->pModInst->operMode == DRV_TMR_OPERATION_MODE_16_BIT)
        {
	        return tmr_counter_get( dObj->pModInst->tmrId );
        }
        else
        {
            return tmr_counter_32bit_get( dObj->pModInst->tmrId );
        }
    }
    return 0;
}

void DRV_TMR_CounterClear ( DRV_HANDLE handle )
{
    DRV_TMR_CLIENT_OBJ *dObj = _DRV_TMR_ClientObj(handle);

    if(dObj)
    {
        if(dObj->pModInst->operMode == DRV_TMR_OPERATION_MODE_16_BIT)
        {
	        return tmr_counter_clear( dObj->pModInst->tmrId );
        }
        else
        {
            return tmr_counter_32bit_clear( dObj->pModInst->tmrId );
        }
    }
}

bool DRV_TMR_AlarmRegister 
( 
    DRV_HANDLE handle, 
    uint32_t divider, 
    bool isPeriodic,
    uintptr_t context, 
    DRV_TMR_CALLBACK callBack 
)
{
    DRV_TMR_CLIENT_OBJ *dObj = _DRV_TMR_ClientObj(handle);

    if(dObj == 0)
    {
        return false;
    }

    DRV_TMR_OPERATION_MODE operMode = dObj->pModInst->operMode;
    bool success = false;

    if(operMode == DRV_TMR_OPERATION_MODE_32_BIT)
    {
        success = (divider >= DRV_TIMER_DIVIDER_MIN_32BIT && divider <= DRV_TIMER_DIVIDER_MAX_32BIT);
    }
    else
    {
        success = (divider >= DRV_TIMER_DIVIDER_MIN_16BIT && divider <= DRV_TIMER_DIVIDER_MAX_16BIT);
    }
    if(success)
    {
        bool resume = _DRV_TMR_Suspend(dObj);
        _DRV_TMR_ClientSetParams(dObj, divider - 1, isPeriodic, context, callBack);

        if(dObj->pModInst->operMode == DRV_TMR_OPERATION_MODE_16_BIT)
        {
            tmr_period_set ( dObj->pModInst->tmrId, (uint16_t)divider);
        }
        else
        {
            tmr_period_32bit_set ( dObj->pModInst->tmrId, divider);
        }
		
        if(resume)
        {
            _DRV_TMR_Resume(dObj, resume);
        }
        else
        {
            dObj->clientStatus = DRV_TMR_CLIENT_OBJ_ARMED;
        }
    }

    return success;
}

void DRV_TMR_AlarmPeriodSet ( DRV_HANDLE handle, uint32_t   period )
{
    DRV_TMR_CLIENT_OBJ *dObj = _DRV_TMR_ClientObj(handle);

    if(dObj)
    {
        bool resume = _DRV_TMR_Suspend(dObj);
        /* Client update with the new count value */
        dObj->pModInst->timerPeriod = period;


        if(dObj->pModInst->operMode == DRV_TMR_OPERATION_MODE_16_BIT)
        {
            tmr_period_set ( dObj->pModInst->tmrId, (uint16_t)period);
        }
        else
        {
            tmr_period_32bit_set ( dObj->pModInst->tmrId, period);
        }

        if(resume)
        {
            _DRV_TMR_Resume(dObj, resume);
        }
        else
        {
            dObj->clientStatus = DRV_TMR_CLIENT_OBJ_ARMED;
        }
    }
}

uint32_t DRV_TMR_CounterFrequencyGet ( DRV_HANDLE handle )
{
    
    DRV_TMR_CLIENT_OBJ *dObj = _DRV_TMR_ClientObj(handle);

    if(dObj)
    {
		switch(dObj->pModInst->clockSource)
		{
			case DRV_TMR_CLKSOURCE_MCK_PRESCALE_8: 
				{
					return(SYS_CLK_FrequencyGet(SYS_CLK_MASTER)/8);
					break;
				}
			case DRV_TMR_CLKSOURCE_MCK_PRESCALE_32: 
				{
					return(SYS_CLK_FrequencyGet(SYS_CLK_MASTER)/32);
					break;
				}
			case DRV_TMR_CLKSOURCE_MCK_PRESCALE_128: 
				{
					return(SYS_CLK_FrequencyGet(SYS_CLK_MASTER)/128);
				}
			case DRV_TMR_CLKSOURCE_PCK: 
				{
					return(SYS_CLK_FrequencyGet(SYS_CLK_PROGRAMMABLE_6));
				}				
			default:
            {
				return 0;
                break;
            }				
		}
	}
    return 0;
}
